test/e2e/testdata/networking/guestbook-ui-internal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-internal
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-ui
  type: ClusterIP
